nav section added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testy Hut</title>
-
+    <link rel="shortcut icon" href="./images/face-grin-tongue-wink-solid.svg" type="image/x-icon">
     <!-- tailwind and daisyUI  -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -37,7 +37,16 @@
 </head>
 <body>
     <header>
-
+        <nav class="max-w-screen-lg mx-auto py-4">
+            <div class="navbar bg-base-100">
+                <div class="navbar-start">
+                  <a class=""><img src="./images/Tasty_HUT.png" alt=""></a>
+                </div>
+                <div class="navbar-end">
+                  <a class="btn btn-warning">Sign Up</a>
+                </div>
+              </div>
+        </nav>
     </header>
     <main>
 
