--- a/index.html
+++ b/index.html
@@ -67,10 +67,122 @@
         <!-- banner section end  -->
     </header>
     <main>
-
+        <!-- food section start  -->
+        <section class="max-w-screen-lg mx-auto py-4 my-10 px-3">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-10 my-5">
+            <!-- food 1 -->
+            <div class="card card-side bg-base-100 shadow-xl">
+                <figure><img src="./images/Rectangle 3980.png" alt="Movie"/></figure>
+                <div class="card-body">
+                  <h2 class="card-title">Chicken Handi</h2>
+                  <p>There are many variations of passages of available, but the majority have suffered</p>
+                  <button class="flex text-amber-300 underline" onclick="my_modal_2.showModal()">View Details</button>
+                </div>
+              </div>
+            <!-- food 1 -->
+            <div class="card card-side bg-base-100 shadow-xl">
+                <figure><img src="./images/Rectangle 3980 (1).png" alt="Movie"/></figure>
+                <div class="card-body">
+                  <h2 class="card-title">Chicken Handi</h2>
+                  <p>There are many variations of passages of available, but the majority have suffered</p>
+                  <button class="flex text-amber-300 underline" onclick="my_modal_2.showModal()">View Details</button>
+                </div>
+              </div>
+            <!-- food 1 -->
+            <div class="card card-side bg-base-100 shadow-xl">
+                <figure><img src="./images/Rectangle 3980 (2).png" alt="Movie"/></figure>
+                <div class="card-body">
+                  <h2 class="card-title">Chicken Handi</h2>
+                  <p>There are many variations of passages of available, but the majority have suffered</p>
+                  <button class="flex text-amber-300 underline" onclick="my_modal_2.showModal()">View Details</button>
+                </div>
+              </div>
+            <!-- food 1 -->
+            <div class="card card-side bg-base-100 shadow-xl">
+                <figure><img src="./images/Rectangle 3980 (3).png" alt="Movie"/></figure>
+                <div class="card-body">
+                  <h2 class="card-title">Chicken Handi</h2>
+                  <p>There are many variations of passages of available, but the majority have suffered</p>
+                  <button class="flex text-amber-300 underline" onclick="my_modal_2.showModal()">View Details</button>
+                </div>
+              </div>
+            <!-- food 1 -->
+            <div class="card card-side bg-base-100 shadow-xl">
+                <figure><img src="./images/Rectangle 3980 (4).png" alt="Movie"/></figure>
+                <div class="card-body">
+                  <h2 class="card-title">Chicken Handi</h2>
+                  <p>There are many variations of passages of available, but the majority have suffered</p>
+                  <button class="flex text-amber-300 underline" onclick="my_modal_2.showModal()">View Details</button>
+                </div>
+              </div>
+            <!-- food 1 -->
+            <div class="card card-side bg-base-100 shadow-xl">
+                <figure><img src="./images/Rectangle 3980 (5).png" alt="Movie"/></figure>
+                <div class="card-body">
+                  <h2 class="card-title">Chicken Handi</h2>
+                  <p>There are many variations of passages of available, but the majority have suffered</p>
+                  <button class="flex text-amber-300 underline" onclick="my_modal_2.showModal()">View Details</button>
+                </div>
+              </div> 
+            </div>
+            <div class="flex justify-center">
+                <button class="btn btn-warning">Show All</button>
+            </div>
+            <!-- model section  -->
+            <div>   
+            <!-- Open the modal using ID.showModal() method -->
+            <dialog id="my_modal_2" class="modal font-poppins">
+            <form method="dialog" class="modal-box">
+                <h2 class="text-[#403F3F] text-3xl mb-2">Chicken Handi</h2>
+                <hr>
+                <img class=" my-6 " src="./images/Rectangle 3981.png" alt="">
+                <p class="text-[#706F6F] text-xl my-4"><span class="text-[#403F3F] font-semibold">Category :</span> Chicken</p>
+                <p class="text-[#706F6F] text-xl my-4"><span class="text-[#403F3F] font-semibold">Area : </span> Japanese</p>
+                <p class="text-[#706F6F] text-xl my-4"><span class="text-[#403F3F] font-semibold">Instructions :</span>  AThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+            </form>
+            <form method="dialog" class="modal-backdrop">
+                <button>close</button>
+            </form>
+            </dialog>
+            </div>
+        </section>
+        <!-- food section end  -->
     </main>
-    <footer>
-
-    </footer>
+    <footer class=" p-10 bg-[#ece7d7] text-base-content font-poppins">
+        <div class="footer max-w-screen-lg mx-auto py-4 my-10">
+            <div>
+                <span class="footer-title text-2xl text-[#403F3F]">Services</span> 
+                <a class="link link-hover text-[#706F6F]">Branding</a> 
+                <a class="link link-hover text-[#706F6F]">Design</a> 
+                <a class="link link-hover text-[#706F6F]">Marketing</a> 
+                <a class="link link-hover text-[#706F6F]">Advertisement</a>
+              </div> 
+              <div>
+                <span class="footer-title text-2xl text-[#403F3F]">Company</span> 
+                <a class="link link-hover text-[#706F6F]">About us</a> 
+                <a class="link link-hover text-[#706F6F]">Contact</a> 
+                <a class="link link-hover text-[#706F6F]">Jobs</a> 
+                <a class="link link-hover text-[#706F6F]">Press kit</a>
+              </div> 
+              <div>
+                <span class="footer-title text-2xl text-[#403F3F]">Legal</span> 
+                <a class="link link-hover text-[#706F6F]">Terms of use</a> 
+                <a class="link link-hover text-[#706F6F]">Privacy policy</a> 
+                <a class="link link-hover text-[#706F6F]">Cookie policy</a>
+              </div> 
+              <div>
+                <span class="footer-title text-2xl text-[#403F3F]">Newsletter</span> 
+                <div class="form-control lg:w-80">
+                  <label class="label">
+                    <span class="label-text text-[#706F6F]">Enter your email address</span>
+                  </label> 
+                  <div class="relative">
+                    <input type="text" placeholder="username@site.com" class="input input-bordered w-full pr-16" /> 
+                    <button class="btn btn-primary absolute top-0 right-0 rounded-l-none">Subscribe</button>
+                  </div>
+                </div>
+              </div>
+        </div>
+      </footer>
 </body>
 </html>
